=================


Version 1.15.0
--------------
* Removed "by April 22, 2010" in email template
* Modified code to keep original ETD owner when admin uploads new file
* Fixed mime-type when uploading Word file
* Added mime-type mappings for rar and gzip files
* Fixed IE bug to correct placement of auto-complete pop-ups
* Updated Screening Questions
* Added Intro page to submission process 


Version 1.14.1
------------
* Fixed issue with Super ADAP

Version 1.14
------------
* Modified code to use Solr 3.3(ssl)

Version 1.13.1
--------------

* Bugfix: display table of contents even if user does not have permission
  to edit table of contents.

Version 1.13
------------

* Thesis record information and file information edit forms no longer
  use XForms; all XForm code has been removed from the site.
* Help request form has been updated to use jQuery instead of Dojo;
  commencement report has been updated to use FCKeditor instead of
  Dojo; all Dojo code has been removed from the site.
* The list of supported browsers no longer needs to be configured in
  ``config.xml``
* The submission process has been modified in attempt to address identified
  usability and workflow issues.

Features in this release
^^^^^^^^^^^^^^^^^^^^^^^^
* An author can edit details for uploaded files in any modern browser, so that
  they don't have to worry about which browser they are using to submit their
  ETD record.
* An author can enter their thesis information (name, language, keywords &
  degree) in any modern browser, so that they don't have to worry about which
  browser they are using to submit their ETD record.
* When a student uploads a PDF to create a new ETD record, the advisor and
  committee members are not populated to avoid invalid and/or inaccurate
  information about advisors.
* When a student uploads a PDF to create a new ETD record, the abstract and
  TOC are not populated so that records are not created with incomplete or
  unusable text.