@@ -17,5 +17,7 @@
   <?= $this->FiletypeIcon("application/x-shockwave-flash") ?></li>
   <li><a href="<?= $this->url(array('action' => 'page-length')) ?>">Document Length</a>
   <?= $this->FiletypeIcon("application/x-shockwave-flash") ?></li>
+  <li><a href="<?= $this->url(array('action' => 'custom')) ?>">Create a Custom Report</a>
+  <?= $this->FiletypeIcon("text/csv") ?></li>
 </ul>
 
