@@ -629,7 +629,7 @@ div.listnav {
  }
 
 /* statistics */
->ol.top50 { 
+ol.top50 { 
  clear:right;
  padding-top:0.25in;
 }
@@ -767,6 +767,15 @@ div#submission_status a {
 }
 
 div#submission_status ul { list-style: none; }
+
+ul.ui-menu { list-style: none; 
+          padding-left: 0; 
+          margin-left: 0; 
+          border: 1px solid; 
+          width: 25em;
+}
+
+ul.ui-menu li.ui-menu-item {opacity: 1; background-color: white}
 
 div#submission_status ul#submission-checklist {
   clear: right;
@@ -1024,7 +1033,7 @@ div.autocomplete ul {
   list-style-type:none;
 }
 
-div.autocomplete ul li.selected { 
+div.autocomplete ul li.selected, ul.ui-autocomplete li.selected, ul.ui-menu li.ui-menu-item a.ui-state-focus { 
   background-color:#ffb;
 }
 
